# gittable

./: 404.html  CNAME  Makefile  README.md  default_requirements.txt  docs_requirements.txt  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  test_requirements.txt
.github/workflows/: distribute.yml  test.yml
api/download/: index.html
api/tag_version/: index.html
cli/: index.html
contributing/: index.html
docs/: CNAME  cli.md  contributing.md  index.md
docs/api/: download.md  tag_version.md
search/: search_index.json
src/git_some/: __main__.py  _utilities.py  download.py  tag_version.py
src/gittable/: download.py  tag_version.py
tests/: test_download.py  test_tag_version.py  test_utilities.py
tests/projects/hatch_test_project/: pyproject.toml
tests/projects/poetry_test_project/: pyproject.toml
tests/projects/test_project_a/: setup.cfg
tests/projects/test_project_b/: pyproject.toml
